--- a/_units/03.md
+++ b/_units/03.md
@@ -34,7 +34,9 @@ In this unit we are primarily concerned with how sounds interact with the world,
 In the natural world, sounds rarely occur in complete isolation. Our sonic environment, or soundscape, consists of combinations of sounds that may include intentional signals as well as sounds that are produced as a result of interactions with the environment. Aspects of the soundscape may contain useful information about the world. One example is reverberation, which is produced by the interaction of a sound with its environment, and the listener can use reverb to infer information about the size and shape of the room.
 
 An analogy of the auditory system's ability to construct a picture of the world can be drawn from the following scenario.
-Lake Scene
+
+{% include img-figure url="/MUTOR/assets/images/unit3_lakescene.jpg" description="Lake Scene" %}
+
 Here is the surface of an irregularly-shaped lake, with two inlets coming out of its side. A fishing bob is floating on each of the inlets. 
 Now suppose you are only allowed to look at the fishing bobs, but you must answer the following questions: 
 1. How many ducks are there?
@@ -59,7 +61,9 @@ These questions have obvious importance for composers and musicians. Later chapt
 Threshold-finding models addressing this question have given way to the use of Signal Detection Theory to obtain a reliable criterion of signal detectability. Signal Detection Theory provides a bias-free measure of sensitivity to any stimulus. 
 
 Simple signal detection theory assumes two Gaussian distributions of signal trials and noise trials respectively. Given some amount of evidence of the signal, plotted on the x axis (or "internal response" as shown in the graph), the observer must decide on the probability that the evidence points to a signal trial or a noise trial. The observer then adopts a criterion (shown as the thick line labeld "criterion response"). Any trial for which the internal response exceeds the criterion is categorized as "signal", and any trial for which the internal response is below criterion is categorized as "noise". 
-Signal Detection Theory illustration 
+
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt1.gif" description="Signal Detection Theory illustration" %}
+
 The following are true given the above situation:
 "hits" are trials that fall under the signal distribution and are correctly labled "signal";
 "misses" are trials that fall under the signal distribution and are incorrectly labeled "noise";
@@ -69,10 +73,18 @@ d' is a measure of sensitivity, given by the distance between the means of the t
 d' = z(hit) - z(false alarm),
 where z is the deviation of the criterion from the mean, given in standard units (z-scores). 
 Since d' is a measurement of how far apart the two distributions are, a higher d' means that signal trials and noise trials are very clearly separated; thus, higher d' signifies better performance. 
-SDT Criterion (image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
+
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt2.gif" description="SDT Criterion" %}
+
+
+(image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
+
 Criterion adoption (i.e. how liberal you are at labelling a trial as "signal") does not affect sensitivity as measured by d'.
 
-d prime illustration (image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
+{% include img-figure url="/MUTOR/assets/images/unit3_sdt3.gif" description="d prime illustration" %}
+
+(image source: http://www.cns.nyu.edu/~david/sdt/sdt.html)
+
 d' scores - the higher the d', the more discriminable the two types of trials are; thus, the better the performance.
 
 In addition to Signal Detection Theory, modern psychophysics and psychacoustics also makes use of the staircase method. Staircase methods are used to find a stable perceptual threshold of discriminability given a unidimensionally varying object. Staircase methods are self-adjusting trials of same-different judgments, where stimuli presented in each trial are selected so as to converge upon some criterion of performance. For example, the two-up-one-down method converges to a threshold of 75% correct performance.
@@ -87,7 +99,7 @@ Very often, we need to know how loud a sound is; although this seems like a very
 
 The intensity of a sound is proportional to the square of the amplitude and is measured in watts per meter^2 
 
-intensity formula
+{% include img-figure url="unit3_intensity_formula.png" description="intensity formula" %}
 
 where I is intensity (W/m^2), P is power in watts, and A is area in square meters.
 
@@ -95,13 +107,13 @@ where I is intensity (W/m^2), P is power in watts, and A is area in square meter
 
 The bel is a unit of measurement created by Bell Laboratories to quantify the reduction in audio level that a signal underwent as it travelled over a mile length of telephone cable. The bel (B) is named after Alexander Graham Bell and the decibel (dB—note the B is capitalized because it refers to Bell's last name) is simply 1/10th of a bel. The decibel is defined as
 
-decibel formula amplitude
-
+{% include img-figure url="unit3_db_amp_formula.png" description="decibel formula amplitude" %}
 for amplitude, where A_0 is some reference amplitude, and 
 
-decibel formula amplitude
+{% include img-figure url="unit3_db_intensity_formula.png" description="decibel formula intensity" %}
+unit 3_db_intensity_formula.png
 
-for intensity. As we can see from these equations, the decibel is not an absolute measure, but rather a comparison against a reference. In acoustics, the measure dB(SPL—Sound Pressure Level) is often used which indicates that the reference is 10^{-9} of atmospheric pressure, 2x10^{-5}N/m^2 at 1000Hz, or 10^{-12} watts for power. Although this may seem complicated, the decibel is really a convenient measure of loudness since our ears work on something closer to a logarithmic scale. See figure 1 for a common sounds and their dB levels.
+for intensity. As we an see from these equations, the decibel is not an absolute measure, but rather a comparison against a reference. In acoustics, the measure dB(SPL—Sound Pressure Level) is often used which indicates that the reference is 10^{-9} of atmospheric pressure, 2x10^{-5}N/m^2 at 1000Hz, or 10^{-12} watts for power. Although this may seem complicated, the decibel is really a convenient measure of loudness since our ears work on something closer to a logarithmic scale. See figure 1 for a common sounds and their dB levels.
 
 dB(SPL) Source (with distance)
 194 Theoretical limit for a sound wave at 1 atmosphere environmental pressure
