--- a/_units/03.md
+++ b/_units/03.md
@@ -140,16 +140,16 @@ Figure 1: Some common sounds and their volumes represented in dB (http://en.wiki
 
 Although much information about the nature of sounds can be gleaned by studying their amplitudes, intensities, etc. this information does not always tell us the whole story about how loud we will perceive a sound to be. Listen to the following two tones, the first at 100Hz and the second at 2000Hz. Although they both have the same amplitude, does one of them seem louder? 
 
-loudness1 demo
+{% include img-figure url="unit3_loudness1-screenshot.png" description="loudness1 demo" %}
 
 In 1933, H. Fletcher and W. A. Munson published a paper entitled "Loudness, it's definition, measurement and calculation" in the Journal of the Acoustical Society of America in which they determined that the perceived loudness of a tone was in part determined by it's frequency. Figure 1 is a plot of the equal-loudness contours or the Fletcher-Munson curves.
 
-fm curve
+{% include img-figure url="unit3_Fletcher-Munson.gif" description="fm curve" %}
 Figure 1: Fletcher-Munson curves for equal-loudness.
 
 Each curve in this graph represents equal loudness, so if we look at the bottom curve, we can see that a tone at 100 Hz and a sound pressure level of approximately 27 dB(SPL) is equal to a tone with a frequency of 2000 Hz at approximately 0 dB(SPL) (see figure 2).
 
-fm curve2
+{% include img-figure url="unit3_fm-curve.png" description="fm curve2" %}
 Figure 2: The two points indicated on by the red arrows will be perceived with equal loudness.
 
 In general, we can see from the graph that the area around 2000-3000 Hz is the loudest—this tells us that our auditory system is the most sensitive to frequencies in this range. As we will see below, this is a top-down view of sound, i.e. there is nothing physically different about tones with the same amplitudes and with frequencies at 100 and 2000 Hz, but we perceive them differently due to the nature of our auditory system. Note that the loudness levels are in phones (see below).
@@ -162,7 +162,7 @@ A phon is a subjective measure of equal loudness relative to a 1000 Hz sine tone
 
 One sone is equal to 40 phones (i.e. the loudness level of a 1000 Hz sine tone at 40 dB(SPL)). To say it another way, the loudness level of a tone at 40 phones is one sone. We can calculate the loudness of a tone in sones using Stephens' power law:
 
-stephens power law
+{% include img-figure url="unit3_stephens_plaw_formula.png" description="stephens power law" %}
 
 where \Psi is the measure of loudness of a single tone, I is the intensity (W/m^2—see above), and k and p are constants. The value if k is 1/15.849 and the current international standard for p is 0.3.
 
@@ -170,30 +170,29 @@ where \Psi is the measure of loudness of a single tone, I is the intensity (W/m^
 
 If we hear two tones simultaneously that are separated in frequency by more than a critical band (We will discuss the critical band in detail in the next unit. For now, a good rule of thumb is that the critical band is approximately 1/3 of an octave.), the resulting loudness will be approximately equal to the sum of the loudness of each component. If, however, the two tones are within a critical band, the loudness can be approximated by applying Stephens' power law to the intensity of the sum of the loudnesses. Note that because the power in Stephens' power law is less than 1, the loudness of two closely spaced tones will be less than that of two tones well separated in frequency assuming equal amplitudes for all of the freqencies. 
 
-loudness2
+{% include img-figure url="unit3_loudness2-screenshot.png" description="loudness2" %}
 
 ## Loudness And Spectra
 
 As we have seen, loudness is not an absolute phenomenon, but rather our perception of loudness can be influenced by our auditory system. In addition to frequency, another factor that influences loudness is spectral content. In the following example, you will hear two sounds: the first one is a pure tone (sine tone), and the second is a complex tone (harmonic). Although their waveforms show that they both have the same amplitude, which one sounds louder?
 
-loudness3
+{% include img-figure url="unit3_loudness3-screenshot.png" description="loudness3" %}
 
 The signal with multiple harmonics sounds louder than the pure tone because our auditory system integrates across frequency (Remember integration from calculus? If not, see the side bar.) so although the pure and complex tones have the same amplitude in the time-domain, the area under the curve is much greater for the complex tone in the frequency-domain.
 
 The spectral integration that our ear performs is an important feature of the way in which we perceive many orchestral instruments, especially the brass instruments. Figure 3 is a sonogram of a tuba playing an A3 starting moderately loud (mf), getting quieter, and then getting louder. Notice that the fundamental (the lowest line in the sonogram) doesn't change amplitude much, but rather, the change in volume comes from the addition of upper partials.
 
-tuba spectrum cresc
+{% include img-figure url="unit3_tuba-cresc.png" description="tuba spectrum cresc" %}
 Figure 3: A tuba playing A3 going from moderately loud to soft to loud.
-
-tuba-cresc.aif
+ 
+![Tuba Crescendo](tuba-cresc.aif?controlsList=nodownload-nofullscreen-noremoteplayback)
 Audio example 1: The tuba from figure 3.
-closeclose otherseditpermalinkreferencesjump
 
 ## Loudness And Time
 
 In addition to the spectral integration we just discussed, the ear also performs a kind of temporal integration. If we hear a very short sound, say 50 ms long, and then hear the same sound for a longer duration, say 200 ms, the latter will appear to be louder even though they both have the same amplitude. Although this effect works well for sounds less than around 250 ms, due to reasons we will discuss in a later unit, the effect is not apparent for sounds longer than around 250 ms.
 
-loudness4
+{% include img-figure url="unit3_loudness4-screenshot.png" description="loudness4" %}
 
 ## Loudness Cues
 
@@ -201,8 +200,8 @@ If someone very far away screams, most listeners will judge the scream a being l
 
 Listen to the following examples; in the first example, you will hear someone speaking at a normal volume and in the second, you will hear a scream. Although the spoken voice is much quieter than the scream, we are still able to tell that one is louder than the other.
 
-Example 1
-Example 2
+![Example 1](unit3_larry1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Example 2](unit3_Psycho1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
 
 An interesting experiment was carried out at the Center for New Music and Audio Technologies (CNMAT) at UC Berkeley. Two speakers were set up as in figure 5—one farther away from the listeners than the other. On top of each speaker was a light and a third speaker was hidden from the listeners. The listeners were asked to write down which speaker the sounds came from; although the sounds all came from the hidden speaker, the lights of the other two speakers would turn on giving the listeners the impression that the speaker with the light on had made the sound. In this case, although all of the sounds that the listeners heard were the same and originated from the same source, the listeners were fooled by the visual information they were receiving. This illustrates the strength that the visual system can have over the auditory system in the way that we perceive the world around us.
 
@@ -210,35 +209,33 @@ An interesting experiment was carried out at the Center for New Music and Audio 
 
 # Reverb and Room Acoustics
 
-## ReverberationIntroduction
-
-Reverberation—Introduction
+## Reverberation Introduction
 
 Reverberation (or reverb) is the result of sounds reflecting off of the surfaces of an enclosed space. Imagine that we make a loud noise (by firing a starter's pistol or poping a balloon) in a cathedral or a hall. The first sound that a listener would hear is called the direct sound (figures 1-3).
 
-
+unit3_roomAcoustics-nosound.png
 Figure 1: A listener in a room in which a loud short sound is made.
 
-
+unit3_roomAcoustics-direct.png
 Figure 2: The first sound to hit the listener is called the direct sound.
 
-
+unit3_reverb-direct-plot.png
 Figure 3: The direct sound from figure 2.
 
 The direct sound is followed by a number of early reflections that arive at the listener after some delay and loss of energy (figures 4-5). The length of the delay and the amount of energy lost are dependant on the size of the room and the type of material used to make the surfaces (the walls, floor, and ceiling).
 
-
+unit3_roomAcoustics-1stRef.png
 Figure 4: The early reflections arrive at the listener after a short delay and with some loss of energy.
 
-
+unit3_reverb-direct-early-plot.png
 Figure 5: The early reflections from figure 4 plotted against time.
 
 As these early reflections continue to bounce off the surfaces they begin to pile up and overlap creating reverb (figures 6-7).
 
-
+unit3_roomAcoustics-reverb.png
 Figure 6: Reverb is as the original sound continues to bounce around the room, we perceive reverb.
 
-
+unit3_reverb-plot.png
 Figure 7: The reverb in a room tends to decay exponentially.
 
 [Figures adapted from Howard, D.M., and Angus, J., Acoustics and Psychoacoustics, Focal Press, 1996.]
@@ -249,40 +246,54 @@ A More In-Depth Look at Reverberation
 
 Our perception of a sound is influenced in many ways by the distance it must travel to reach our ears. Since sound travels at 344 meters per second (1129 feet per second), the time it takes for a sound to travel from source to listener can be calculated by 
 
-
+\begin{equation}
+d=\frac{r}{344m/s}
+\label{eq:delay-formula}
+\end{equation}
 
 where d is the delay time in milliseconds and r is the distance in meters. This delay from source to listener has important consequences for sound amplification—see the section on the precedence effect.
 
 The intensity of the direct sound as experienced by a listener decreases with distance and can be calculated by
 
-
+\begin{equation}
+I=\frac{P}{4\Pi r^2}
+\label{eq:inverse-square}
+\end{equation}
 
 where P is the initial power of the signal, r is the distance from the source in meters, and I is the intensity in W/m^2. Notice that the denominator in the above equation is the area of a sphere due to the fact that sound radiates out in all directions in a spherical pattern. As sound continues to propagate away from the source, it diffuses over a larger and larger area (figure 8). Imagine that you are standing one meter away from a sound source and the intensity of the sound when it reaches you is 100 dB. If you move 10 meters away from the source, the sound will be spread over 100 times the area and the resulting intensity will be 1/100 of the original or 80 dB.
 
-
+unit3_inverse-square-diagram.png
 Figure 8: Sound propagating away from a source diffuses over a larger and larger area.
 
 The later reflections also depend on the absorptive quality of the surfaces they bounce off of and can be calculated by
 
+\begin{equation}
+Ir={missing equation}
+\label{eq:missing-equation}
+\end{equation}
 
 
 where Ir is the intensity after reflection, I is the intensity before reflection, and alpha is an absorption coefficient.
 
 Finally, it can be useful to know what the reverb time in a hall is, i.e. how long does it take for the reverb to die away after a sound is made, but first we must define reverberation time. The reverb time of an enclosed space is the time it takes for the amplitude of a signal to decrease by 60 dB. This number was chosen because a typical symphony orchestra at their loudest is around 100 dB and the background noise in a quiet room is around 40 dB. Knowing that, we can calculate reverb time using WC Sabine's formula:
 
-
+\begin{equation}
+RT_60=C\frac{V}{A}
+\label{eq:reverb-time}
+\end{equation}
 
 where RT_60 is the reverb time, V is the volume of the enclosure, A is the sum of the absorption coefficients for each surface, and C is a constant that takes on 0.161 for calculations in meters and 0.049 for feet.
 
 Sound examples 1-3, and figures 9-11 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
 
-Impulse 1 Impulse 2 Impulse 3
 
+Impulse 1 unit3_impulse1.wav
+Impulse 2 unit3_impulse2.wav
+Impulse 3 unit3_impulse3.wav
 
-
-
-
-
+unit3_impulse-specgram-decayenv.png
+unit3_impulse2-specgram-decayenv.png
+unit3_impulse3-specgram-decayenv.png
 
 Figures 9-11: The reverb decays of three different rooms.
 
@@ -294,26 +305,38 @@ http://www.cksde.com/p_6_250.htm
 While Bottom-Up perspectives of perception refer to the stimulus-driven processing of sounds beginning from the periphery of the auditory system, Top-Down perspectives begin with the higher-level mental processes that are accessible to the human mind. Top-Down processes may include our knowledge of the context of a piece of music, our memory of related musical pieces, the cognitive effort of paying attention to certain aspects of the stimulus, and our emotional state during the perception of music. 
 
 One example of top-down knowledge is the understanding of a musical allusion - i.e. knowing the source material from which another musical work is quoting. This can often influence how the music is perceived. A famous case of a musical allusion is in the third movement of Mahler's First Symphony.
-Children's song "Frere Jacques" 
-The opening measures of Mahler's Symphony No. 1 in D, "Titan".
-Mahler quoted the melody from the traditional children's song Frere Jacques, but transposed it into the minor mode. An especially eerie and intriguing effect is achieved when the audience recognizes the source of the musical quotation. Thus the perception of the mood of this piece is enhanced by top-down knowledge. 
+
+
+Children's song "Frère Jacques" unit3_frerejacques.mid
+
+The opening measures of Mahler's Symphony No. 1 in D, "Titan" unit3_mahler1.mp3.
+
+
+Mahler quoted the melody from the traditional children's song Frère Jacques, but transposed it into the minor mode. An especially eerie and intriguing effect is achieved when the audience recognizes the source of the musical quotation. Thus the perception of the mood of this piece is enhanced by top-down knowledge. 
 
 Another example is the effects of visual information on the perception of musical sounds. In an audiovisual environment, information received by the visual and auditory systems interact in important ways. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing.
 
 # Perceptual Illusions
 
 Top-Down perspectives influence Bottom-Up processing in many important ways. Compare the heights of the two people in the following picture. 
-Top Down
+
+unit3_topdownillusion.jpg Top Down
+
 Although the two persons are identical in actual size, the figure closer to the bottom of the picture is perceived as being smaller than the other person. This is because of top-down inference of the higher person being further away, and our knowledge of linear perspective playing a role in the picture leads us to infer that the further figure is larger. If the background context is removed, the illusion disappears and we perceive both people as of similar size.
-Perceptual illusion corrected
+
+unit3_topdownillusion2.jpg Perceptual illusion corrected
+
 Perceptual illusions like this one often rely on the unconscious inference of contextual cues, which is based on top-down knowledge of naturalistic scenes.
 
-# MelodicProcesses
+# Melodic Processes
 
 The effects of Top-Down processing are not limited to the perception of visual illusions. Top-Down, cognitively-driven processing of sounds is equally important in auditory perception. Psychoacoustical studies have shown that the perception of loudness depends on top-down factors. For example, shouting from afar is perceived as being louder than whispering from nearby, even if the absolute levels of the sound signals are the same. This is because the auditory system makes use of cues such as timbre, source location (which may include reverb), and any visual information available (see AudioVisualInteraction), in order to adjust the experience of the sound signal coming from Bottom-Up processes. The Top-Down modulation of Bottom-Up processing serves important evolutionary advantage, as some knowledge of the relative importance of sounds is necessary for the mind to effectively process and prioritze information so to ensure survival. 
 
 Top-Down influences also play important roles in the perception of more complex musical attributes. In his Implication-Realization model, Narmour (1990) laid out various principles of top-down influences on melodic perception, in which our top-down expectations for how melodies tend to sound may influence our experience of melodies. Narmour specifically discusses these top-down expectations in terms of intervals in a melody. Based on the general knowledge of perceptual organization, we tend to expect small intervals in one direction to follow large intervals in the opposite direction. The melodic process of large intervals being followed by smaller intervals in the opposite direction, also known as gap fill, is found in most popular tunes. 
-happy birthday A line from the Happy Birthday song, illustrating the principle of gap fill. More on these top-down expectations for melodic processes will be discussed in Unit 7.
+
+unit3_happybday.jpg happy birthday 
+
+A line from the Happy Birthday song, illustrating the principle of gap fill. More on these top-down expectations for melodic processes will be discussed in Unit 7.
 
 # Precedence Effect
 
