--- a/_units/03.md
+++ b/_units/03.md
@@ -11,8 +11,23 @@ authors:
  - author 1
 topics: [topic 1, topic 2]
 test_questions:
- - question 1
- - question 2
+ - What is the McGurk Effect and what does it show about multisensory interaction?
+
+- In this unit we emphasized that top-down processing may influence bottom-up  - perspectives in important ways. List three ways in which information from the top down may interact with bottom-up processing, and give an example for each.
+
+ - What does the decibel measure, and how is it calculated from the intensity of a sound in a silent background?
+ 
+ - Which tone sounds louder: a 50dB tone at 200 Hz, or a 50dB tone at 2000 Hz? How do we know?
+ 
+ - Why might it be evolutionarily advantageous for the auditory system to show the Precedence Effect?
+ 
+ - How does the Clifton Effect differ from the Precedence Effect?
+ 
+ - How is loudness calculated for a complex tone with a rich harmonic spectrum?
+
+ - A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears? Please refer to the diagram below:
+guitarreverb.jpg Guitar Reverb
+
 
 ###
 # page layout:
@@ -342,7 +357,9 @@ A line from the Happy Birthday song, illustrating the principle of gap fill. Mor
 
 The Precedence Effect, also known as the Haas Effect or the Law of the First Wavefront, states that it is the first acoustic information that arrives at a listener that determines the location of a sound. When the same sound arrives at our ears from many directions, we tend to perceive the first sound wave that reaches us as the source, and the later wavefronts as reverberations, or echoes.
 The precedence effect can be demonstrated using stereo stereo speakers presenting pairs of click sounds. When two clicks are presented from opposite speakers within a very short time of each other, where the first click is called the "lead" and the second is the "lag", we tend to perceive the sound source to be from the "lead". The "lag" is perceived as an echo. If the location of the lead and lag are switched (i.e. the speaker that was playing the later click in the pair, now plays the first click), then the new location is perceived as a sound source. Thus, the first sound to reach the ears is always perceived as the location of the sound source.
-Precedence Effect
+
+unit3_precedence.gif Precedence Effect
+
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
 Precedence Effect Demonstration (requires stereo headphones) 
 (source: http://www.parmly.luc.edu/parmly/clifton.html)
@@ -352,25 +369,25 @@ The precedence effect may be due to top-down influences on the auditory system. 
 see also: FranssenEffect, CliftonEffect
 
 ## Applications of Precedence Effect
-PsycheLoui, 8 June 2006 (created 8 June 2006)
-tags:
-Unit2
+
 Audio engineers make use of the precedence effect in the design of concert halls. If the speakers are closer to the audience than the performer is, the audience would perceive sound from the loudspeakers rather than from the performer. To ensure that sound is perceived as coming from the performer, audio engineers often implement delay lines between the performer's microphone and the speakers, such that first wavefront reaching the audience comes directly from the performer rather than the speaker. If sounds from the speakers reach the audience after sounds directly from the performer, then the perceived sound would be localized to the performer.
 
-Engineering Applications
-FranssenEffect
-PsycheLoui, 8 June 2006 (created 30 May 2006)
-tags:
-Unit2
+unit3_preceng.jpg  Engineering Applications
+
+## FranssenEffect
+
 Like the PrecedenceEffect, the FranssenEffect has to do with perceived sound sources. In a two-channel speaker system, if a tone is presented with rapid onset to one speaker, and this tone is ramped off at the same time as when another tone in the opposite speaker is ramped on and sustained, this combination of tones is perceived as just one tone coming from the first speaker (i.e. the speaker that played the onset). The effect is obtained with narrow-band sounds, and only in echoic environments.
 
-## Franssen Effect
+franssen.gif Franssen Effect
 (adapted from Dent, Tollin, & Yin, 2004.)
+
 The FranssenEffect. If a rapid-onset tone is presented at the left speaker and then decays slowly while another tone at the right is presented with slowly increasing amplitude, the percept is of a single stimulus coming from the left.
+
 ## CliftonEffect
 
 The CliftonEffect is a change to the classical Precedence Demonstration. This change is described in the figure below. Again, pairs of clicks are presented with one slightly preceding the other (the first click is the "source"; the second is the "echo".) Half way into the click train, the source and echo clicks are reversed. That is, halfway through the demonstration the loudspeaker that had delivered the first or source click now delivers the delayed or echo click and vice versa. In the Clifton Effect, an unexpected percept occurrs immediately after the switch, where two clicks are perceived often coming from the location of each loudspeaker. Then after 4 or 5 more click-pair presentations following the switch, a single click is again perceived and its location is now at the loudspeaker presenting the lead click, which is the opposite loudspeaker from that which produced the lead click for the first half of the click train. Most listeners tend to hear two clicks at the beginning of the click train, then fusion occurs, then after the switch two clicks are heard, and then finally fusion reoccurs but at the location of the other loudspeaker. That is, after the switch there is a temporary cessation or breakdown of the Precedence Effect; fusion and/or echo suppression stops. This breakdown occurred because of the prior exposure you had during the first half of the click train. Thus, your experience with the source and echo clicks somehow influenced your perception after the source and echo clicks were switched. Eventually however, echo suppression reoccurs and the Precedence Effect works as before. This demonstration suggests that echo processing might depend on our listening experience in the reflective spaces that we are currently in. 
-Clifton Effect
+
+clifton.gif Clifton Effect
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
 In the Clifton demonstration the two clicks are always seperated by 12 ms and the click pairs are presented at a rate of about 3 per second.
 Clifton Effect Demonstration (requires stereo headphones) 
@@ -382,7 +399,8 @@ So far we have discussed the auditory system's processing of sounds and its vari
 
 Soundtracks in movies offer one case of auditory perception enhancing visual perception. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing. In one particular study by Marilyn Boltz (2001), video clips were paired with positive, neutral, and negative soundtracks and shown to study participants. After viewing the films, participants were asked to rate how well certain adjectives described the content of the video (e.g. "What adjective best describes the man's intentions for following the womann? benevolent / malevolent") 
 Participants rated videos with positive soundtracks as being better described by positive adjectives, and videos with negative soundtracks using negative adjectives. Videos with no soundtracks were rated as relatively neutral. This study shows strong effects of musical stimuli on the perception of meaning and emotional content of visual scenes.
-Boltz soundtrack study
+
+boltz.jpg Boltz soundtrack study
 (image source & reference: http://caliber.ucpress.net/doi/pdfplus/10.1525/mp.2001.18.4.427)
 M.G. Boltz. 2001. Musical Soundtracks as a Schematic Influence on the Cognitive Processing of Filmed Events. Music Perception Summer 2001.
 
@@ -393,6 +411,10 @@ In the real world, events in the visual and auditory modalities are usually corr
 When an audio-visual mismatch occurs, the brain may decide to reinterpret information from the auditory system such that it matches the visual modality. In a sense, the brain makes the auditory system obey the visual system, so that the resulting percept is of a single representation of a multimodal stimulus. The phenomenon of visual information overriding auditory information is known as visual capture.
 One demosntration of AudioVisualInteraction, especially of the visual capture of auditory stimuli, is the case of ventriloquism.
 http://www.paulzerdin.com/
+
+<html>
+<object width="425" height="350"><embed src="babyvent.mpg" width="425" height="350" autoplay="false"></embed></object>
+        </html>
   
 (video source: http://www.paulzerdin.com) 
 (see also http://video.google.com/videoplay?docid=8126344216754570223&q=ventriloquist+is%3Afree+duration%3Ashort&pr=goog-sl)
@@ -403,8 +425,12 @@ Ventriloquism relies on the brain's tendency to integrate auditory information t
 When the auditory and visual systems are uncorrelated, visual capture (such as the VentriloquismEffect) is a typical result. There are some cases, however, when visual capture does not occur. Instead, the brain takes input from both auditory and visual systems, and integrates them to create a unique multimodal percept which is different from either the visual or auditory stimulus alone. 
 
 In the lab it is possible to create situations in which the visual and auditory percepts do not match. 
+
+<html>
+<embed name="McGurk_large.mov" SRC="McGurk_large.mov" width="400" height="320" autoplay="false"></html>
  
 (video source: http://www.media.uio.no/personer/arntm/McGurk_english.html)
+
 A demonstration of the McGurk Effect. To experience the McGurk Effect, play this video clip in three different ways: 
 normally: both watching and listening to the video (fused condition)
 with your eyes shut but while listening to the clip (auditory condition)
@@ -420,8 +446,8 @@ In the previous unit, we discussed sound largely in the abstract, whereas here w
 
 # Links And Downloads
 
-Auditorium acoustics concepts
-Dprime calculator by Tom Wickens - see SignalDetectionTheory
+Auditorium acoustics concepts: http://hyperphysics.phy-astr.gsu.edu/Hbase/acoustic/auditcon.html#c1
+Dprime calculator by Tom Wickens: http://ist-socrates.berkeley.edu/~twickens/DPRIMEW.EXE - see SignalDetectionTheory [anchor]
 Clarement Graduate School's Signal Detection Theory Demo
 Auditory Scene Analysis - Bregman's book on MIT Press
 Music Perception journal
@@ -455,15 +481,5 @@ http://hyperphysics.phy-astr.gsu.edu/Hbase/acoustic/auditcon.html
 
 # Quiz Items
 
-What is the McGurk Effect and what does it show about multisensory interaction?
-In this unit we emphasized that top-down processing may influence bottom-up perspectives in important ways. List three ways in which information from the top down may interact with bottom-up processing, and give an example for each.
-What does the decibel measure, and how is it calculated from the intensity of a sound in a silent background?
-Which tone sounds louder: a 50dB tone at 200 Hz, or a 50dB tone at 2000 Hz? How do we know?
-Why might it be evolutionarily advantageous for the auditory system to show the Precedence Effect?
-How does the Clifton Effect differ from the Precedence Effect?
-How is loudness calculated for a complex tone with a rich harmonic spectrum?
-Please refer to the diagram below:
-Guitar Reverb
-A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears?
 
 {% include unit_postamble.md %}
