--- a/_units/03.md
+++ b/_units/03.md
@@ -8,8 +8,8 @@ number: 3
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
-topics: [topic 1, topic 2]
+ - author 1PrecedenceEffect
+topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
 test_questions:
  - What is the McGurk Effect and what does it show about multisensory interaction?
 
