--- a/_units/03.md
+++ b/_units/03.md
@@ -25,8 +25,9 @@ test_questions:
  
  - How is loudness calculated for a complex tone with a rich harmonic spectrum?
 
- - A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears? Please refer to the diagram below:
+ - A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears? Please refer to the diagram below: guitarreverb.jpg Guitar Reverb:
 
+{% include note author="vg" text="'Frequenzverhältnis' should be in English righ?" %}
 
 
 ###
