--- a/_units/03.md
+++ b/_units/03.md
@@ -8,7 +8,7 @@ number: 3
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1PrecedenceEffect
+ - Psyche Loui and John MacCallum
 topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
 test_questions:
  - What is the McGurk Effect and what does it show about multisensory interaction?
@@ -25,7 +25,7 @@ test_questions:
  
  - How is loudness calculated for a complex tone with a rich harmonic spectrum?
 
- - A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears? Please refer to the diagram below: guitarreverb.jpg Guitar Reverb:
+ - A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears? Please refer to the diagram below: guitarreverb.jpg Guitar Reverb
  
 ###
 # page layout:
@@ -113,7 +113,10 @@ Very often, we need to know how loud a sound is; although this seems like a very
 
 The intensity of a sound is proportional to the square of the amplitude and is measured in watts per meter^2 
 
-{% include img-figure url="unit3_intensity_formula.png" description="intensity formula" %}
+\begin{equation}
+I=\frac{P}{A}
+\label{eq:Intensity-formula}
+\end{equation}
 
 where I is intensity (W/m^2), P is power in watts, and A is area in square meters.
 
@@ -122,10 +125,18 @@ where I is intensity (W/m^2), P is power in watts, and A is area in square meter
 The bel is a unit of measurement created by Bell Laboratories to quantify the reduction in audio level that a signal underwent as it travelled over a mile length of telephone cable. The bel (B) is named after Alexander Graham Bell and the decibel (dB—note the B is capitalized because it refers to Bell's last name) is simply 1/10th of a bel. The decibel is defined as
 
 {% include img-figure url="unit3_db_amp_formula.png" description="decibel formula amplitude" %}
+
+\begin{equation}
+dB=20log_10(\frac{A}{A_0})
+\label{eq:dB-amplitude}
+\end{equation}
+
 for amplitude, where A_0 is some reference amplitude, and 
 
-{% include img-figure url="unit3_db_intensity_formula.png" description="decibel formula intensity" %}
-unit 3_db_intensity_formula.png
+\begin{equation}
+dB=10log_10(\frac{I}{I_0})
+\label{eq:dB-intensity}
+\end{equation}
 
 for intensity. As we an see from these equations, the decibel is not an absolute measure, but rather a comparison against a reference. In acoustics, the measure dB(SPL—Sound Pressure Level) is often used which indicates that the reference is 10^{-9} of atmospheric pressure, 2x10^{-5}N/m^2 at 1000Hz, or 10^{-12} watts for power. Although this may seem complicated, the decibel is really a convenient measure of loudness since our ears work on something closer to a logarithmic scale. See figure 1 for a common sounds and their dB levels.
 
@@ -227,29 +238,29 @@ An interesting experiment was carried out at the Center for New Music and Audio 
 
 Reverberation (or reverb) is the result of sounds reflecting off of the surfaces of an enclosed space. Imagine that we make a loud noise (by firing a starter's pistol or poping a balloon) in a cathedral or a hall. The first sound that a listener would hear is called the direct sound (figures 1-3).
 
-unit3_roomAcoustics-nosound.png
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-nosound.png" description="Room Acoustics No Sound" %}
 Figure 1: A listener in a room in which a loud short sound is made.
 
-unit3_roomAcoustics-direct.png
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-direct.png" description="Room Acoustics Direct Sound" %}
 Figure 2: The first sound to hit the listener is called the direct sound.
 
-unit3_reverb-direct-plot.png
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-plot.png" description="Reverb Direct Plot" %}
 Figure 3: The direct sound from figure 2.
 
 The direct sound is followed by a number of early reflections that arive at the listener after some delay and loss of energy (figures 4-5). The length of the delay and the amount of energy lost are dependant on the size of the room and the type of material used to make the surfaces (the walls, floor, and ceiling).
 
-unit3_roomAcoustics-1stRef.png
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-1stRef.png" description="Room Acoustics First Reflections" %}
 Figure 4: The early reflections arrive at the listener after a short delay and with some loss of energy.
 
-unit3_reverb-direct-early-plot.png
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-early-plot.png" description="Reverb Direct Early Plot" %}
 Figure 5: The early reflections from figure 4 plotted against time.
 
 As these early reflections continue to bounce off the surfaces they begin to pile up and overlap creating reverb (figures 6-7).
 
-unit3_roomAcoustics-reverb.png
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-reverb.png" description="Room Acoustics Reverb" %}
 Figure 6: Reverb is as the original sound continues to bounce around the room, we perceive reverb.
 
-unit3_reverb-plot.png
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-plot.png" description="Reverb Plot" %}
 Figure 7: The reverb in a room tends to decay exponentially.
 
 [Figures adapted from Howard, D.M., and Angus, J., Acoustics and Psychoacoustics, Focal Press, 1996.]
