--- a/_units/03.md
+++ b/_units/03.md
@@ -17,7 +17,7 @@ test_questions:
 
  - What does the decibel measure, and how is it calculated from the intensity of a sound in a silent background?
 
- - Which tone sounds louder: a 50dB tone at 200 Hz, or a 50dB tone at 2000 Hz? How do we know?
+ - Which tone sounds louder? A 50dB tone at 200 Hz, or a 50dB tone at 2000 Hz? How do we know?
 
  - Why might it be evolutionarily advantageous for the auditory system to show the Precedence Effect?
 
