--- a/_units/03.md
+++ b/_units/03.md
@@ -124,8 +124,6 @@ where I is intensity (W/m^2), P is power in watts, and A is area in square meter
 
 The bel is a unit of measurement created by Bell Laboratories to quantify the reduction in audio level that a signal underwent as it travelled over a mile length of telephone cable. The bel (B) is named after Alexander Graham Bell and the decibel (dB—note the B is capitalized because it refers to Bell's last name) is simply 1/10th of a bel. The decibel is defined as
 
-{% include img-figure url="unit3_db_amp_formula.png" description="decibel formula amplitude" %}
-
 \begin{equation}
 dB=20log_10(\frac{A}{A_0})
 \label{eq:dB-amplitude}
@@ -165,16 +163,16 @@ Figure 1: Some common sounds and their volumes represented in dB (http://en.wiki
 
 Although much information about the nature of sounds can be gleaned by studying their amplitudes, intensities, etc. this information does not always tell us the whole story about how loud we will perceive a sound to be. Listen to the following two tones, the first at 100Hz and the second at 2000Hz. Although they both have the same amplitude, does one of them seem louder? 
 
-{% include img-figure url="unit3_loudness1-screenshot.png" description="loudness1 demo" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_loudness1-screenshot.png" description="loudness1 demo" %}
 
 In 1933, H. Fletcher and W. A. Munson published a paper entitled "Loudness, it's definition, measurement and calculation" in the Journal of the Acoustical Society of America in which they determined that the perceived loudness of a tone was in part determined by it's frequency. Figure 1 is a plot of the equal-loudness contours or the Fletcher-Munson curves.
 
-{% include img-figure url="unit3_Fletcher-Munson.gif" description="fm curve" %}
+{% include img-figure url=/MUTOR/assets/images/"unit3_Fletcher-Munson.gif" description="fm curve" %}
 Figure 1: Fletcher-Munson curves for equal-loudness.
 
 Each curve in this graph represents equal loudness, so if we look at the bottom curve, we can see that a tone at 100 Hz and a sound pressure level of approximately 27 dB(SPL) is equal to a tone with a frequency of 2000 Hz at approximately 0 dB(SPL) (see figure 2).
 
-{% include img-figure url="unit3_fm-curve.png" description="fm curve2" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_fm-curve.png" description="fm curve2" %}
 Figure 2: The two points indicated on by the red arrows will be perceived with equal loudness.
 
 In general, we can see from the graph that the area around 2000-3000 Hz is the loudest—this tells us that our auditory system is the most sensitive to frequencies in this range. As we will see below, this is a top-down view of sound, i.e. there is nothing physically different about tones with the same amplitudes and with frequencies at 100 and 2000 Hz, but we perceive them differently due to the nature of our auditory system. Note that the loudness levels are in phones (see below).
@@ -187,7 +185,7 @@ A phon is a subjective measure of equal loudness relative to a 1000 Hz sine tone
 
 One sone is equal to 40 phones (i.e. the loudness level of a 1000 Hz sine tone at 40 dB(SPL)). To say it another way, the loudness level of a tone at 40 phones is one sone. We can calculate the loudness of a tone in sones using Stephens' power law:
 
-{% include img-figure url="unit3_stephens_plaw_formula.png" description="stephens power law" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_stephens_plaw_formula.png" description="stephens power law" %}
 
 where \Psi is the measure of loudness of a single tone, I is the intensity (W/m^2—see above), and k and p are constants. The value if k is 1/15.849 and the current international standard for p is 0.3.
 
@@ -195,29 +193,29 @@ where \Psi is the measure of loudness of a single tone, I is the intensity (W/m^
 
 If we hear two tones simultaneously that are separated in frequency by more than a critical band (We will discuss the critical band in detail in the next unit. For now, a good rule of thumb is that the critical band is approximately 1/3 of an octave.), the resulting loudness will be approximately equal to the sum of the loudness of each component. If, however, the two tones are within a critical band, the loudness can be approximated by applying Stephens' power law to the intensity of the sum of the loudnesses. Note that because the power in Stephens' power law is less than 1, the loudness of two closely spaced tones will be less than that of two tones well separated in frequency assuming equal amplitudes for all of the freqencies. 
 
-{% include img-figure url="unit3_loudness2-screenshot.png" description="loudness2" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_loudness2-screenshot.png" description="loudness2" %}
 
 ## Loudness And Spectra
 
 As we have seen, loudness is not an absolute phenomenon, but rather our perception of loudness can be influenced by our auditory system. In addition to frequency, another factor that influences loudness is spectral content. In the following example, you will hear two sounds: the first one is a pure tone (sine tone), and the second is a complex tone (harmonic). Although their waveforms show that they both have the same amplitude, which one sounds louder?
 
-{% include img-figure url="unit3_loudness3-screenshot.png" description="loudness3" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_loudness3-screenshot.png" description="loudness3" %}
 
 The signal with multiple harmonics sounds louder than the pure tone because our auditory system integrates across frequency (Remember integration from calculus? If not, see the side bar.) so although the pure and complex tones have the same amplitude in the time-domain, the area under the curve is much greater for the complex tone in the frequency-domain.
 
 The spectral integration that our ear performs is an important feature of the way in which we perceive many orchestral instruments, especially the brass instruments. Figure 3 is a sonogram of a tuba playing an A3 starting moderately loud (mf), getting quieter, and then getting louder. Notice that the fundamental (the lowest line in the sonogram) doesn't change amplitude much, but rather, the change in volume comes from the addition of upper partials.
 
-{% include img-figure url="unit3_tuba-cresc.png" description="tuba spectrum cresc" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="tuba spectrum cresc" %}
 Figure 3: A tuba playing A3 going from moderately loud to soft to loud.
  
-![Tuba Crescendo](tuba-cresc.aif?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Tuba Crescendo](/MUTOR/assets/images/tuba-cresc.aif?controlsList=nodownload-nofullscreen-noremoteplayback)
 Audio example 1: The tuba from figure 3.
 
 ## Loudness And Time
 
 In addition to the spectral integration we just discussed, the ear also performs a kind of temporal integration. If we hear a very short sound, say 50 ms long, and then hear the same sound for a longer duration, say 200 ms, the latter will appear to be louder even though they both have the same amplitude. Although this effect works well for sounds less than around 250 ms, due to reasons we will discuss in a later unit, the effect is not apparent for sounds longer than around 250 ms.
 
-{% include img-figure url="unit3_loudness4-screenshot.png" description="loudness4" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_loudness4-screenshot.png" description="loudness4" %}
 
 ## Loudness Cues
 
@@ -225,8 +223,8 @@ If someone very far away screams, most listeners will judge the scream a being l
 
 Listen to the following examples; in the first example, you will hear someone speaking at a normal volume and in the second, you will hear a scream. Although the spoken voice is much quieter than the scream, we are still able to tell that one is louder than the other.
 
-![Example 1](unit3_larry1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
-![Example 2](unit3_Psycho1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Example 1](/MUTOR/assets/images/unit3_larry1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Example 2](/MUTOR/assets/images/unit3_Psycho1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
 
 An interesting experiment was carried out at the Center for New Music and Audio Technologies (CNMAT) at UC Berkeley. Two speakers were set up as in figure 5—one farther away from the listeners than the other. On top of each speaker was a light and a third speaker was hidden from the listeners. The listeners were asked to write down which speaker the sounds came from; although the sounds all came from the hidden speaker, the lights of the other two speakers would turn on giving the listeners the impression that the speaker with the light on had made the sound. In this case, although all of the sounds that the listeners heard were the same and originated from the same source, the listeners were fooled by the visual information they were receiving. This illustrates the strength that the visual system can have over the auditory system in the way that we perceive the world around us.
 
