--- a/_units/03.md
+++ b/_units/03.md
@@ -125,14 +125,14 @@ where I is intensity (W/m^2), P is power in watts, and A is area in square meter
 The bel is a unit of measurement created by Bell Laboratories to quantify the reduction in audio level that a signal underwent as it travelled over a mile length of telephone cable. The bel (B) is named after Alexander Graham Bell and the decibel (dB—note the B is capitalized because it refers to Bell's last name) is simply 1/10th of a bel. The decibel is defined as
 
 \begin{equation}
-dB=20log_10(\frac{A}{A_0})
+dB=20log_1_0(\frac{A}{A_0})
 \label{eq:dB-amplitude}
 \end{equation}
 
 for amplitude, where A_0 is some reference amplitude, and 
 
 \begin{equation}
-dB=10log_10(\frac{I}{I_0})
+dB=10log_1_0(\frac{I}{I_0})
 \label{eq:dB-intensity}
 \end{equation}
 
