--- a/_units/03.md
+++ b/_units/03.md
@@ -167,7 +167,7 @@ Although much information about the nature of sounds can be gleaned by studying 
 
 In 1933, H. Fletcher and W. A. Munson published a paper entitled "Loudness, it's definition, measurement and calculation" in the Journal of the Acoustical Society of America in which they determined that the perceived loudness of a tone was in part determined by it's frequency. Figure 1 is a plot of the equal-loudness contours or the Fletcher-Munson curves.
 
-{% include img-figure url=/MUTOR/assets/images/"unit3_Fletcher-Munson.gif" description="fm curve" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_Fletcher-Munson.gif" description="fm curve" %}
 Figure 1: Fletcher-Munson curves for equal-loudness.
 
 Each curve in this graph represents equal loudness, so if we look at the bottom curve, we can see that a tone at 100 Hz and a sound pressure level of approximately 27 dB(SPL) is equal to a tone with a frequency of 2000 Hz at approximately 0 dB(SPL) (see figure 2).
