--- a/_units/03.md
+++ b/_units/03.md
@@ -230,7 +230,7 @@ An interesting experiment was carried out at the Center for New Music and Audio 
 
 [figure coming...]
 
-[Loudness And Time](#Loudness And Time)
+[Loudness And Time](##Loudness And Time)
 
 # Reverb and Room Acoustics
 
