--- a/_units/03.md
+++ b/_units/03.md
@@ -185,9 +185,9 @@ A phon is a subjective measure of equal loudness relative to a 1000 Hz sine tone
 
 One sone is equal to 40 phones (i.e. the loudness level of a 1000 Hz sine tone at 40 dB(SPL)). To say it another way, the loudness level of a tone at 40 phones is one sone. We can calculate the loudness of a tone in sones using Stephens' power law:
 
-{% include img-figure url="/MUTOR/assets/images/unit3_stephens_plaw_formula.png" description="stephens power law" %}
+\Psi=kI^p
 
-where \Psi is the measure of loudness of a single tone, I is the intensity (W/m^2—see above), and k and p are constants. The value if k is 1/15.849 and the current international standard for p is 0.3.
+where Psi is the measure of loudness of a single tone, I is the intensity (W/m^2—see above), and k and p are constants. The value if k is 1/15.849 and the current international standard for p is 0.3.
 
 ## Loudness Of Multiple Pitches
 
@@ -230,7 +230,7 @@ An interesting experiment was carried out at the Center for New Music and Audio 
 
 [figure coming...]
 
-[Loudness And Time](##Loudness And Time)
+[Loudness And Time](#Loudness And Time)
 
 # Reverb and Room Acoustics
 
