--- a/_units/03.md
+++ b/_units/03.md
@@ -185,7 +185,11 @@ A phon is a subjective measure of equal loudness relative to a 1000 Hz sine tone
 
 One sone is equal to 40 phones (i.e. the loudness level of a 1000 Hz sine tone at 40 dB(SPL)). To say it another way, the loudness level of a tone at 40 phones is one sone. We can calculate the loudness of a tone in sones using Stephens' power law:
 
+\begin{equation}
 \Psi=kI^p
+\label{eq:Stephens-power-law}
+\end{equation}
+
 
 where Psi is the measure of loudness of a single tone, I is the intensity (W/m^2—see above), and k and p are constants. The value if k is 1/15.849 and the current international standard for p is 0.3.
 
