--- a/_units/03.md
+++ b/_units/03.md
@@ -212,7 +212,7 @@ The spectral integration that our ear performs is an important feature of the wa
 {% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="tuba spectrum cresc" %}
 Figure 3: A tuba playing A3 going from moderately loud to soft to loud.
  
-![Tuba Crescendo](/MUTOR/assets/images/tuba-cresc.aif?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Tuba Crescendo](/MUTOR/assets/audios/tuba-cresc.aif?controlsList=nodownload-nofullscreen-noremoteplayback)
 Audio example 1: The tuba from figure 3.
 
 ## Loudness And Time
@@ -227,8 +227,8 @@ If someone very far away screams, most listeners will judge the scream a being l
 
 Listen to the following examples; in the first example, you will hear someone speaking at a normal volume and in the second, you will hear a scream. Although the spoken voice is much quieter than the scream, we are still able to tell that one is louder than the other.
 
-![Example 1](/MUTOR/assets/images/unit3_larry1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
-![Example 2](/MUTOR/assets/images/unit3_Psycho1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Example 1](/MUTOR/assets/audios/unit3_larry1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
+![Example 2](/MUTOR/assets/audios/unit3_Psycho1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
 
 An interesting experiment was carried out at the Center for New Music and Audio Technologies (CNMAT) at UC Berkeley. Two speakers were set up as in figure 5—one farther away from the listeners than the other. On top of each speaker was a light and a third speaker was hidden from the listeners. The listeners were asked to write down which speaker the sounds came from; although the sounds all came from the hidden speaker, the lights of the other two speakers would turn on giving the listeners the impression that the speaker with the light on had made the sound. In this case, although all of the sounds that the listeners heard were the same and originated from the same source, the listeners were fooled by the visual information they were receiving. This illustrates the strength that the visual system can have over the auditory system in the way that we perceive the world around us.
 
@@ -307,7 +307,7 @@ where Ir is the intensity after reflection, I is the intensity before reflection
 Finally, it can be useful to know what the reverb time in a hall is, i.e. how long does it take for the reverb to die away after a sound is made, but first we must define reverberation time. The reverb time of an enclosed space is the time it takes for the amplitude of a signal to decrease by 60 dB. This number was chosen because a typical symphony orchestra at their loudest is around 100 dB and the background noise in a quiet room is around 40 dB. Knowing that, we can calculate reverb time using WC Sabine's formula:
 
 \begin{equation}
-RT_60=C\frac{V}{A}
+RT_{60}=C\frac{V}{A}
 \label{eq:reverb-time}
 \end{equation}
 
