--- a/_units/03.md
+++ b/_units/03.md
@@ -6,7 +6,7 @@
 title: Fundamentals of Psychoacoustics
 number: 3
 short_description: short description of the unit
-summary: brief summary of the unit
+summary: This unit is concerned with how sounds interact with the world and the influence knowledge and understanding can exert. One important distinction to make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing manifested in loudness perception and room acoustics, which, in turn, are also dependent on Top-Down knowledge. Auditory illusions caused by a mismatch between Top-Down and Bottom-Up signals will be discussed as well.
 authors: 
  - Psyche Loui and John MacCallum
 topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
@@ -40,9 +40,9 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Introduction
-In the previous unit we introduced various physical properties of the sound stimulus. We saw that frequency, ampltude, phase, temporal envelopes, and spectral envelopes are all useful descriptors of sounds, and that different visual representations may contain useful information about these sound properties.
+In the previous unit we introduced various physical properties of the sound stimulus. We saw that frequency, amplitude, phase, temporal envelopes, and spectral envelopes are all useful descriptors of sounds, and that different visual representations may contain useful information about these sound properties.
 But how do these physical descriptions relate to how you actually hear? In other words, how does our perception of a physical stimulus depend upon its context? 
-In this unit we are primarily concerned with how sounds interact with the world, and the ways with which they can be influenced by our long-term knowledge and understanding. One important distinction we make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing (such as the extraction of frequency, reverberation, and some issues explored in ElementaryPsychoacoustics. LoudnessPerception and room acoustics are two topics that receive important information from the Bottom-Up perspective, but are heavily dependent on Top-Down knowledge as well. This unit will also investigate the cases involving mismatch between Top-Down and Bottom-Up signals, which give rise to the PrecedenceEffect, the VentriloquismEffect, and other perceptual phenomena and illusions.
+In this unit we are primarily concerned with how sounds interact with the world, and the ways with which they can be influenced by our long-term knowledge and understanding. One important distinction we make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing (such as the extraction of frequency, reverberation, and some issues explored in Elementary Psychoacoustics. Loudness perception and room acoustics are two topics that receive important information from the Bottom-Up perspective, but are heavily dependent on Top-Down knowledge as well. This unit will also investigate the cases involving mismatch between Top-Down and Bottom-Up signals, which give rise to the Precedence Effect, the Ventriloquism Effect, and other perceptual phenomena and illusions.
 
 # Sound Ecology
 In the natural world, sounds rarely occur in complete isolation. Our sonic environment, or soundscape, consists of combinations of sounds that may include intentional signals as well as sounds that are produced as a result of interactions with the environment. Aspects of the soundscape may contain useful information about the world. One example is reverberation, which is produced by the interaction of a sound with its environment, and the listener can use reverb to infer information about the size and shape of the room.
